Fix layout align (App)

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   max-width: 1280px;
   margin: 0 auto;
